Enhance CI workflow: add end-to-end test step and modify application port configuration

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,3 +42,8 @@ jobs:
           files: ./coverage/lcov.info
           token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: false
+
+      - name: Run e2e tests
+        run: npm run test:e2e
+        env:
+          E2E_PORT: 3001
