--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
+    "test": "jest --testPathPattern=test/unit",
+    "test:unit": "jest --testPathPattern=test/unit",
+    "test:integration": "jest --testPathPattern=test/integration",
+    "test:e2e": "jest --config ./test/e2e/jest-e2e.json",
+    "test:watch": "jest --watch --testPathPattern=test/unit",
+    "test:cov": "jest --coverage --testPathPattern=test/unit",
+    "test:all": "jest",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:integration": "jest test/**/*.integration.spec.ts",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
     "generate:diagrams": "node scripts/generate-diagrams.js"
   },
   "dependencies": {
@@ -60,12 +62,14 @@
       "ts"
     ],
     "rootDir": ".",
-    "testRegex": "test/.*\\.spec\\.ts$",
+    "testRegex": "test/(unit|integration)/.*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "collectCoverageFrom": [
-      "src/**/*.(t|j)s"
+      "src/**/*.(t|j)s",
+      "!src/main.ts",
+      "!src/**/*.module.ts"
     ],
     "coverageDirectory": "coverage",
     "coverageThreshold": {
