--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.4.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "reflect-metadata": "^0.1.13",
@@ -72,7 +73,12 @@
       "!src/**/*.module.ts"
     ],
     "coverageDirectory": "coverage",
-    "coverageReporters": ["text", "lcov", "json", "json-summary"],
+    "coverageReporters": [
+      "text",
+      "lcov",
+      "json",
+      "json-summary"
+    ],
     "coverageThreshold": {
       "global": {
         "lines": 80,
