--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test:cov": "jest --coverage --testPathPattern=test/unit",
     "test:all": "jest",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "generate:diagrams": "node scripts/generate-diagrams.js"
+    "generate:diagrams": "node scripts/generate-diagrams.js",
+    "generate:api-docs": "ts-node scripts/generate-api-docs.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -39,6 +40,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -47,6 +49,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "js-yaml": "^4.1.1",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
