Add Husky for pre-commit hooks to automate API documentation generation and update README with details on the new process. Adjust CI workflow to maintain backup documentation generation.

--- a/.github/workflows/generate-api-docs.yml
+++ b/.github/workflows/generate-api-docs.yml
@@ -1,8 +1,12 @@
 name: Generate API Documentation
 
+# NOTE: This workflow is kept as a backup. Documentation is primarily
+# generated via pre-commit hook. This ensures documentation is updated
+# even if commits are made directly on GitHub or if the hook is bypassed.
+
 on:
   push:
-    branches: [main, master, develop]
+    branches: [main]
     paths:
       - 'src/**/*.ts'
       - 'src/**/*.dto.ts'
