--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test:all": "jest",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "generate:diagrams": "node scripts/generate-diagrams.js",
-    "generate:api-docs": "ts-node scripts/generate-api-docs.ts"
+    "generate:api-docs": "ts-node scripts/generate-api-docs.ts",
+    "prepare": "husky"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -48,6 +49,7 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "husky": "^9.1.7",
     "jest": "^29.5.0",
     "js-yaml": "^4.1.1",
     "prettier": "^3.0.0",
