--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "jest": "^29.5.0",
     "js-yaml": "^4.1.1",
     "prettier": "^3.0.0",
+    "redoc-cli": "^0.13.21",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
