--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "jest": "^29.5.0",
     "js-yaml": "^4.1.1",
     "prettier": "^3.0.0",
-    "redoc-cli": "^0.13.21",
+    "@redocly/cli": "^2.12.3",
     "source-map-support": "^0.5.21",
     "supertest": "^7.1.4",
     "ts-jest": "^29.1.0",
