Refactor API documentation generation and update test configurations
- Renamed `generate-api-docs.ts` to `generateApiDocs.ts` for consistency in naming conventions.
- Removed the old `generate-api-docs.ts` file to streamline the documentation generation process.
- Updated the test regex pattern in `jest-e2e.json` for improved matching of end-to-end test files.
- Deleted outdated end-to-end and integration test files related to movements to clean up the codebase.

These changes enhance the maintainability and clarity of the documentation generation and testing setup.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test:all": "jest",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "generate:diagrams": "node scripts/generate-diagrams.js",
-    "generate:api-docs": "ts-node scripts/generate-api-docs.ts",
+    "generate:api-docs": "ts-node scripts/generateApiDocs.ts",
     "prepare": "husky"
   },
   "dependencies": {
