Update coverage configuration in package.json
- Modified the coverage configuration to exclude `app.ts` instead of `module.ts` from coverage collection.

This change ensures that the coverage reports accurately reflect the relevant files in the codebase.

--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "collectCoverageFrom": [
       "src/**/*.(t|j)s",
       "!src/main.ts",
-      "!src/**/*.module.ts"
+      "!src/app.ts"
     ],
     "coverageDirectory": "coverage",
     "coverageReporters": [
