Update coverage configuration in package.json to exclude app.module.ts instead of app.ts for accurate coverage reports.

--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "collectCoverageFrom": [
       "src/**/*.(t|j)s",
       "!src/main.ts",
-      "!src/app.ts"
+      "!src/app.module.ts"
     ],
     "coverageDirectory": "coverage",
     "coverageReporters": [
