--- a/.github/workflows/generate-api-docs.yml
+++ b/.github/workflows/generate-api-docs.yml
@@ -48,18 +48,18 @@ jobs:
         id: check-docs
         run: |
           # Check if files exist in git (if not, they're new and should be committed)
-          if ! git ls-files --error-unmatch documentation/openapi.json >/dev/null 2>&1; then
+          if ! git ls-files --error-unmatch documentation/api/openapi.json >/dev/null 2>&1; then
             echo "changed=true" >> $GITHUB_OUTPUT
             echo "📝 API documentation file is new, will be committed"
             exit 0
           fi
 
           # Check if the generated file differs from the committed version
-          if ! git diff --quiet HEAD -- documentation/openapi.json documentation/openapi.yaml documentation/api-documentation.html 2>/dev/null; then
+          if ! git diff --quiet HEAD -- documentation/api/openapi.json documentation/api/openapi.yaml documentation/api/api-documentation.html 2>/dev/null; then
             echo "changed=true" >> $GITHUB_OUTPUT
             echo "📝 API documentation has changed"
             echo "Changes:"
-            git diff --stat HEAD -- documentation/openapi.json documentation/openapi.yaml documentation/api-documentation.html || true
+            git diff --stat HEAD -- documentation/api/openapi.json documentation/api/openapi.yaml documentation/api/api-documentation.html || true
           else
             echo "changed=false" >> $GITHUB_OUTPUT
             echo "📝 No changes detected in API documentation"
@@ -70,7 +70,7 @@ jobs:
         run: |
           git config --local user.email "vincou40@gmail.com"
           git config --local user.name "GoBwah"
-          git add documentation/openapi.json documentation/openapi.yaml documentation/api-documentation.html
+          git add documentation/api/openapi.json documentation/api/openapi.yaml documentation/api/api-documentation.html
           git commit -m "docs: update API documentation [skip ci]" || exit 0
           git push
         env:
