--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.1.9",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.9",
     "@nestjs/platform-express": "^11.1.9",
     "@nestjs/swagger": "^11.0.0",
@@ -39,6 +40,7 @@
     "@nestjs/cli": "^11.0.14",
     "@nestjs/schematics": "^11.0.9",
     "@nestjs/testing": "^11.1.9",
+    "@redocly/cli": "^2.12.3",
     "@types/express": "^5.0.6",
     "@types/jest": "^29.5.2",
     "@types/js-yaml": "^4.0.9",
@@ -53,7 +55,6 @@
     "jest": "^29.5.0",
     "js-yaml": "^4.1.1",
     "prettier": "^3.0.0",
-    "@redocly/cli": "^2.12.3",
     "source-map-support": "^0.5.21",
     "supertest": "^7.1.4",
     "ts-jest": "^29.1.0",
