Enhance application configuration with CORS and rate limiting support
- Added CORS configuration to allow specified origins and methods, improving API security and flexibility.
- Integrated rate limiting using @nestjs/throttler, with configurable TTL and request limits to prevent abuse.
- Updated .env.example to include new environment variables for CORS and throttling settings.
- Modified configuration management to parse and handle new environment variables effectively.
- Enhanced app.module.ts to include ThrottlerModule and apply ThrottlerGuard globally.

These changes improve the application's security and performance by managing cross-origin requests and limiting excessive API calls.

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,13 @@ API_PREFIX=api
 
 # Logging
 LOG_LEVEL=info
+
+# CORS Configuration
+# Comma-separated list of allowed origins, or * for all origins
+CORS_ORIGIN=*
+
+# Rate Limiting
+# TTL in seconds (time window)
+THROTTLE_TTL=60
+# Maximum number of requests per TTL window
+THROTTLE_LIMIT=100
