Update performance test script and refactor imports in performance tests
- Modified the `test:performance` script in package.json to include a specific regex for performance test files, ensuring better test targeting.
- Refactored import statements in `performance.spec.ts` to consolidate imports from `request.dto`, improving code clarity and organization.

These changes enhance the performance testing setup and improve the maintainability of the test code.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:watch": "jest --watch --testPathPattern=test/unit",
     "test:cov": "jest --coverage --testPathPattern=test/unit",
     "test:all": "jest",
-    "test:performance": "jest --testPathPattern=test/performance",
+    "test:performance": "jest --testPathPattern=test/performance --testRegex=test/performance/.*\\.spec\\.ts$",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "benchmark": "ts-node scripts/benchmark.ts",
     "benchmark:gc": "node --expose-gc -r ts-node/register scripts/benchmark.ts",
