--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,3 +135,46 @@ jobs:
         env:
           E2E_PORT: 3001
         timeout-minutes: 10
+
+  performance:
+    name: Performance Tests
+    runs-on: ubuntu-latest
+    needs: [e2e]
+    timeout-minutes: 20
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '24.x'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build project
+        run: npm run build
+
+      - name: Run performance tests
+        run: npm run test:performance
+        continue-on-error: false
+
+      - name: Run benchmark script
+        run: npm run benchmark
+        continue-on-error: false
+        env:
+          NODE_OPTIONS: '--max-old-space-size=4096'
+
+      - name: Upload performance results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: performance-results
+          path: |
+            coverage/
+            *.log
+          retention-days: 7
+          if-no-files-found: ignore
