--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,25 +5,6 @@ on:
     # Trigger on all branches
 
 jobs:
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '24.x'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run linter
-        run: npm run lint
-
   security-audit:
     name: Security Audit
     runs-on: ubuntu-latest
@@ -47,7 +28,7 @@ jobs:
   test:
     name: Test (Node ${{ matrix.node-version }})
     runs-on: ubuntu-latest
-    needs: [lint]
+    needs: [security-audit]
 
     strategy:
       matrix:
@@ -70,7 +51,7 @@ jobs:
         run: npm run build
 
       - name: Run tests with coverage
-        run: npm run test:cov
+        run: npm test -- --coverage
 
       - name: Check coverage threshold
         run: |
