Enhance application performance and maintainability
- Updated `package.json` by removing the `benchmark:gc` script to streamline commands.
- Modified `.vscode/settings.json` to turn off automatic Jest runs, allowing for manual control.
- Integrated middleware in `src/main.ts` to handle JSON and URL-encoded request bodies with a size limit of 50mb.
- Added a utility function in `balance.util.ts` to round monetary values to two decimal places, improving precision in balance calculations.
- Expanded E2E tests in `e2e.spec.ts` to include performance validation for handling large datasets, ensuring responses are received within 10 seconds.

These changes collectively enhance the application's performance, maintainability, and testing capabilities.

--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "test:e2e": "jest --config ./test/e2e/jest-e2e.json",
     "test:all": "jest",
     "test:performance": "jest --testPathPatterns=test/performance --testRegex=test/performance/.*\\.spec\\.ts$",
-    "benchmark": "ts-node scripts/benchmark.ts",
-    "benchmark:gc": "node --expose-gc -r ts-node/register scripts/benchmark.ts"
+    "benchmark": "ts-node scripts/benchmark.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.1.9",
